# parsec_access

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: check_for_no_missing_todos.yml  check_for_updates.yml  tests.yml
scripts/: code_coverage.sh  generate_code.py  generate_code.sh  refresh_userdata_folder.sh
src/: api.rs  data.rs  error.rs  file.rs  getters.rs  lib.rs  line.rs  trajectory.rs  units.rs
src/access/: data.rs  masses.rs  metallicity.rs  mod.rs
src/units/: mass.rs  mod.rs  time.rs
tests/: getters.rs  performance.rs  physics.rs  readme_test.rs
