[package]
authors = ["The Comamba <thecomamba@jojoheinze.de>"]
categories = ["database", "science"]
description = "Access the PARSEC database for stellar evolutionary trajectories."
edition = "2021"
keywords = ["parsec", "astronomy"]
license = "MIT"
name = "parsec_access"
readme = "README.md"
repository = "https://github.com/TheComamba/ParsecAccess"
version = "0.1.0"

[dependencies]
directories = { version = "5.0", default-features = false } # Standard locations on file system
flate2 = { version = "1.0", default-features = false, features = ["zlib-ng-compat"] } # Decompression
lazy_static = { version = "1.4", default-features = false }
reqwest = { version = "0.12.0", default-features = false, features = ["blocking", "rustls-tls"] } # Downloading files
rmp-serde = { version = "1.1", default-features = false } # RMP Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] } # (De)Serialization
tar = { version = "0.4.0", default-features = false } # Decompression
