[package]
authors = ["The Comamba <thecomamba@jojoheinze.de>"]
categories = ["database", "science"]
description = "Access the PARSEC database for stellar evolutionary trajectories."
edition = "2021"
keywords = ["parsec", "astronomy"]
license = "MIT"
name = "parsec_access"
readme = "README.md"
repository = "https://github.com/TheComamba/ParsecAccess"
version = "1.0.0"

[dependencies]
directories = { version = "6.0", default-features = false } # Standard locations on file system
flate2 = { version = "1.0", default-features = false, features = ["zlib-ng-compat"] } # Decompression
glob = { version = "0.3", default-features = false } # File system traversal
lazy_static = { version = "1.4", default-features = false }
rayon = { version = "1.8", default-features = false } # Parallelism
reqwest = { version = "0.12.0", default-features = false, features = ["blocking", "rustls-tls"] } # Downloading files
simple-si-units = { version = "1.1", default-features = false, features = ["serde"] }
tar = { version = "0.4.0", default-features = false } # Decompression

[dev-dependencies]
serial_test = "3.0.0"
